--- a/About/style.css
+++ b/About/style.css
@@ -88,3 +88,68 @@ nav ul li a{
   bottom: 30px;
   transform: translateX(-50%);
 }
+.msg-container{
+  width: 600px;
+  height: 280px;
+  position: absolute;
+  left: 14%;
+  top: 57%;
+  transform: translateY(-50%);
+  overflow: hidden;
+}
+
+#slider{
+  display: inline-flex;
+}
+.msg-col{
+  width: 600px;
+  height: 280px;
+}
+.msg-col h1{
+  color: #fff;
+  font-size: 80px;
+  font-weight: 100;
+  margin: 10px 0;
+}
+.msg-col p{
+  color: #ddd;
+  font-size: 15px;
+  line-height: 25px;
+}
+.msg-col a{
+  display: inline-block;
+  text-decoration: none;
+  color: #555;
+  background: #fff;
+  font-size: 15px;
+  padding: 10px 35px;
+  border-radius: 30px;
+  margin-top: 25px;
+}
+
+.controller{
+  width: 1px;
+  height: 320px;
+  display: block;
+  background: #c0c0c0;
+  position: absolute;
+  top: 55%;
+  right: 50px;
+  transform: translateY(-50%);
+}
+#line1,#line2,#line3,#line4{
+  height: 80px;
+  width: 10px;
+  cursor: pointer;
+  transform: translateX(-50%);
+}
+
+#active{
+  width: 5px;
+  height: 80px;
+  border-radius: 10px;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  transform: translateX(-50%);
+}
