--- a/About/style.css
+++ b/About/style.css
@@ -100,6 +100,7 @@ nav ul li a{
 
 #slider{
   display: inline-flex;
+  transition: 0.5s;
 }
 .msg-col{
   width: 600px;
@@ -152,4 +153,5 @@ nav ul li a{
   position: absolute;
   top: 0;
   transform: translateX(-50%);
+  transition: 0.5s;
 }
