--- a/About/style.css
+++ b/About/style.css
@@ -6,7 +6,7 @@
 .container{
   width: 100%;
   height: 100vh;
-  background-image: url(images/background.png);
+  background-image: url(images/background3.jpg);
   background-position: center;
   background-size: cover;
   position: relative;
